# citeman

./: .gitignore  README.md  RELEASE-NOTES.md  bibliography.bib  library.py  process.py  processor.py  pyproject.toml  query.py  source.py  ui.py
.github/workflows/: publish-to-pypi.yml
src/citeman/: __main__.py  bibliography.py  library.py  parser.py  processor.py  query.py  ui.py  ui_history.py  ui_list.py  ui_notice.py  ui_pretty.py  ui_query.py  ui_remove.py  ui_show.py  utils.py
