[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citeman"
version = "0.1.33"
authors = [
    {name = "Dylan Russell, MD", email = "dyl.russell@gmail.com"}
]
maintainers = [
   {name = "Dylan Russell, MD", email = "dyl.russell@gmail.com"}
]
description = "A simple command line citation manager for your academic manuscript."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# for all [tool.*] headings below
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
citeman = ["logo"]

[project.urls]
Homepage = "https://github.com/dylanrussellmd/pycite"
Issues = "https://github.com/dylanrussellmd/pycite/issues"